// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartBulletQualitativeRange 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="140"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 140"
      width="450"
    >
      <g
        role="presentation"
      >
        <line
          role="presentation"
          shape-rendering="auto"
          style="stroke: var(--pf-chart-axis--axis--stroke--Color, #d2d2d2); fill: var(--pf-chart-axis--axis--Fill, transparent); stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
          vector-effect="non-scaling-stroke"
          x1="50"
          x2="400"
          y1="85"
          y2="85"
        />
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="225"
            x2="225"
            y1="85"
            y2="90"
          />
          <text
            direction="inherit"
            dx="0"
            id="test"
            x="225"
            y="111.97"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-chart-global--label--stroke, transparent); fill: var(--pf-chart-axis--tick-label--Fill, #4f5255); text-anchor: middle;"
              text-anchor="middle"
              x="225"
            >
              0
            </tspan>
          </text>
        </g>
      </g>
      <g>
        <rect
          height="0"
          role="presentation"
          shape-rendering="auto"
          style="fill: none;"
          vector-effect="non-scaling-stroke"
          width="0"
          x="225"
          y="131"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="140"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChartBulletQualitativeRange 2`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="140"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 140"
      width="450"
    >
      <g
        role="presentation"
      >
        <line
          role="presentation"
          shape-rendering="auto"
          style="stroke: var(--pf-chart-axis--axis--stroke--Color, #d2d2d2); fill: var(--pf-chart-axis--axis--Fill, transparent); stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
          vector-effect="non-scaling-stroke"
          x1="50"
          x2="400"
          y1="85"
          y2="85"
        />
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="225"
            x2="225"
            y1="85"
            y2="90"
          />
          <text
            direction="inherit"
            dx="0"
            id="test"
            x="225"
            y="111.97"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-chart-global--label--stroke, transparent); fill: var(--pf-chart-axis--tick-label--Fill, #4f5255); text-anchor: middle;"
              text-anchor="middle"
              x="225"
            >
              0
            </tspan>
          </text>
        </g>
      </g>
      <g>
        <rect
          height="0"
          role="presentation"
          shape-rendering="auto"
          style="fill: none;"
          vector-effect="non-scaling-stroke"
          width="0"
          x="225"
          y="131"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="140"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders component data 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      aria-describedby="victory-container-3-desc"
      aria-labelledby="victory-container-3-title"
      height="140"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 140"
      width="450"
    >
      <title
        id="victory-container-3-title"
      >
        Bullet chart example
      </title>
      <desc
        id="victory-container-3-desc"
      >
        Storage capacity
      </desc>
      <g
        role="presentation"
      >
        <line
          role="presentation"
          shape-rendering="auto"
          style="stroke: var(--pf-chart-axis--axis--stroke--Color, #d2d2d2); fill: var(--pf-chart-axis--axis--Fill, transparent); stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
          vector-effect="non-scaling-stroke"
          x1="50"
          x2="400"
          y1="85"
          y2="85"
        />
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="50"
            x2="50"
            y1="85"
            y2="90"
          />
          <text
            direction="inherit"
            dx="0"
            id="test2"
            x="50"
            y="111.97"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-chart-global--label--stroke, transparent); fill: var(--pf-chart-axis--tick-label--Fill, #4f5255); text-anchor: middle;"
              text-anchor="middle"
              x="50"
            >
              0
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="400"
            x2="400"
            y1="85"
            y2="90"
          />
          <text
            direction="inherit"
            dx="0"
            id="test2"
            x="400"
            y="111.97"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-chart-global--label--stroke, transparent); fill: var(--pf-chart-axis--tick-label--Fill, #4f5255); text-anchor: middle;"
              text-anchor="middle"
              x="400"
            >
              100
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="137.5"
            x2="137.5"
            y1="85"
            y2="90"
          />
          <text
            direction="inherit"
            dx="0"
            id="test2"
            x="137.5"
            y="111.97"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-chart-global--label--stroke, transparent); fill: var(--pf-chart-axis--tick-label--Fill, #4f5255); text-anchor: middle;"
              text-anchor="middle"
              x="137.5"
            >
              25
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="225"
            x2="225"
            y1="85"
            y2="90"
          />
          <text
            direction="inherit"
            dx="0"
            id="test2"
            x="225"
            y="111.97"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-chart-global--label--stroke, transparent); fill: var(--pf-chart-axis--tick-label--Fill, #4f5255); text-anchor: middle;"
              text-anchor="middle"
              x="225"
            >
              50
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="312.5"
            x2="312.5"
            y1="85"
            y2="90"
          />
          <text
            direction="inherit"
            dx="0"
            id="test2"
            x="312.5"
            y="111.97"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-chart-global--label--stroke, transparent); fill: var(--pf-chart-axis--tick-label--Fill, #4f5255); text-anchor: middle;"
              text-anchor="middle"
              x="312.5"
            >
              75
            </tspan>
          </text>
        </g>
      </g>
      <g
        role="presentation"
      >
        <path
          d="M 50, 85 
A 0 0 0 0 1, 50, 85 
L 50, 55 
A 0 0 0 0 1, 50, 55 
L 312.5, 55 
A 0 0 0 0 1, 312.5, 55 
L 312.5, 85 
A 0 0 0 0 1, 312.5, 85 
 z"
          index="0"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-bullet--qualitative-range--ColorScale--200, #d2d2d2); stroke: var(--pf-chart-bar--data--stroke, none); padding: 8px; stroke-width: 0;"
        />
      </g>
      <g
        role="presentation"
      >
        <path
          d="M 50, 85 
A 0 0 0 0 1, 50, 85 
L 50, 55 
A 0 0 0 0 1, 50, 55 
L 225, 55 
A 0 0 0 0 1, 225, 55 
L 225, 85 
A 0 0 0 0 1, 225, 85 
 z"
          index="0"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-bullet--qualitative-range--ColorScale--100, #f0f0f0); stroke: var(--pf-chart-bar--data--stroke, none); padding: 8px; stroke-width: 0;"
        />
      </g>
      <g
        role="presentation"
      >
        <path
          d="M 50, 74.5 
A 0 0 0 0 1, 50, 74.5 
L 50, 65.5 
A 0 0 0 0 1, 50, 65.5 
L 225, 65.5 
A 0 0 0 0 1, 225, 65.5 
L 225, 74.5 
A 0 0 0 0 1, 225, 74.5 
 z"
          index="0"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--100, #06c); stroke: var(--pf-chart-bar--data--stroke, none); padding: 8px; stroke-width: 0;"
        />
      </g>
      <g
        role="presentation"
      >
        <path
          d="M 358, 85 
A 0 0 0 0 1, 358, 85 
L 358, 55 
A 0 0 0 0 1, 358, 55 
L 358, 55 
A 0 0 0 0 1, 358, 55 
L 358, 85 
A 0 0 0 0 1, 358, 85 
 z"
          index="0"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-bullet--comparative-measure--warning--Fill--Color, #ec7a08); stroke: var(--pf-chart-bullet--comparative-measure--warning--stroke--Color, #ec7a08); padding: 8px; stroke-width: 2;"
        />
      </g>
      <g>
        <rect
          height="0"
          role="presentation"
          shape-rendering="auto"
          style="fill: none;"
          vector-effect="non-scaling-stroke"
          width="0"
          x="225"
          y="131"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="140"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;
